--- a/app/views/MainTemplate.scala.html
+++ b/app/views/MainTemplate.scala.html
@@ -35,7 +35,7 @@
   showSignOut: Boolean = true,
   feedbackOnSignOut: Boolean = true,
   user: Option[User[_]] = None)(mainContent: Html)(
-  implicit request: Request[_], messages: Messages, appConfig: AppConfig)
+  implicit request: RequestHeader, messages: Messages, appConfig: AppConfig)
 
 @titleServiceName = @{
     user.fold(messages("navTitle.vat"))(u => if(u.isAgent) messages("navTitle.agent") else messages("navTitle.nonAgent"))
